--- a/app/views/contact/new.haml
+++ b/app/views/contact/new.haml
@@ -5,7 +5,7 @@
 
 %div.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
-    = render :partial => "form", :locals => {:message => @message}
+    = render :partial => "contact/form", :locals => {:message => @message}
 
   %div#right_col.yui3-u-7-24
     = render :partial => "shared/seller_signup"
