--- a/public/stylesheets/sass/form_basics.scss
+++ b/public/stylesheets/sass/form_basics.scss
@@ -30,7 +30,7 @@ i {
 
 /* FIELD elements */
 .field {
-    margin-bottom : 20px;
+/*    margin-bottom : 20px;  this is in app.scss as 10px. wtf? get your story straight */
 }
 .field label {
     display : block;
