--- a/app/views/spotlights/show.html.haml
+++ b/app/views/spotlights/show.html.haml
@@ -22,4 +22,4 @@
   %div#right_col.yui3-u-7-24
     = render :partial => "shared/seller_signup"
     %hr.space
-    = render :partial => "shared/add_badge"
+    = render :partial => "shared/add_badge", :locals => {:spotlight => @spotlight}
