--- a/app/views/shared/_copy_featured_icon_code_create.haml
+++ b/app/views/shared/_copy_featured_icon_code_create.haml
@@ -1,5 +1,6 @@
 :ruby
-  copy_code_img = image_tag_url 'featured/home-buyer-resource.png', :alt => "Featured Home Buyer Resource : eHouseOffers.com"
+  copy_code_img = image_tag_url 'featured/home-buyer-resource.png', :alt => "#{spotlight.title} : eHouseOffers.com"
 
-= link_to(copy_code_img, :controller => :home, :action => :home, :only_path => false)
-%div{:style => "font-size:.7em;color:#666"}= raw "Powered by #{ link_to 'eHouseOffers.com', :controller => :home, :action => :home, :only_path => false }"
+%div{:style => 'width:112px; text-align:center; font-size:9px; color:#666'}
+  = "eHouseOffers #{link_to(copy_code_img, :controller => :spotlights, :action => :show, :id => spotlight.title_for_url, :only_path => false)}"
+  = link_to 'Professional Home Buyers', :controller => :home, :action => :home, :only_path => false
