--- a/app/views/home/_in_the_news.haml
+++ b/app/views/home/_in_the_news.haml
@@ -2,12 +2,12 @@
 
 %div#in_the_newsC.yui3-u-g
   %div.logo.yui3-u-5-24
-    - ml = image_tag '/images/transparent.gif', :id => 'mint_logo', :class => 'about_sprite', :alt => 'Mint.com'
+    - ml = image_tag '/images/transparent.gif', :id => 'mint_logo', :alt => 'Mint.com'
     = link_to ml, 'http://www.mint.com'
   %div.url.yui3-u-7-24
     = link_to 'http://www.mint.com', 'http://www.mint.com'
   %div.logo.yui3-u-11-48
-    - zl = image_tag '/images/transparent.gif', :id => 'zillow_logo', :class => 'about_sprite', :alt => 'Zillow.com'
+    - zl = image_tag '/images/transparent.gif', :id => 'zillow_logo', :alt => 'Zillow.com'
     = link_to zl, 'http://www.zillow.com'
   %div.url.yui3-u-11-48
     = link_to 'http://www.zillow.com', 'http://www.zillow.com'
