--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -25,11 +25,15 @@
     %meta{'name' => 'keywords', :content => keywords}/
     %meta{'name' => 'description', :content => descr}/
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}/
-
     %link{:rel => :stylesheet, :type => "text/css", :href => "/stylesheets/yui3-min.css"}
+
+    - if cp = controller.canonical_path
+      %link{:rel => :canonical,  :href => "#{cp}"}
 
     - if @noindex
       %meta{:name => 'robots', :content => 'noindex,follow'}
+    - else
+      %meta{:name => 'robots', :content => 'noydir,noodp'}
 
     = stylesheet_link_tag :defaults
     = yield(:extra_css) if content_for?(:extra_css)
@@ -39,7 +43,7 @@
     :plain
       <!--[if IE 8]>
         <style type="text/css">
-          html { font-size : 85%\0/; } /* IE 8 font sie hack */
+          html { font-size : 85%\0/; } /* IE 8 font size hack */
         </style>
       <![endif]-->
       <!--[if IE 7]>
