--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -37,7 +37,7 @@
 
     = stylesheet_link_tag :defaults
     = yield(:extra_css) if content_for?(:extra_css)
-    = javascript_include_tag :defaults, 'jquery.growl'
+    = javascript_include_tag :defaults
     = yield(:extra_js) if content_for?(:extra_js)
 
     :plain
