--- a/public/stylesheets/sass/reasons.scss
+++ b/public/stylesheets/sass/reasons.scss
@@ -18,6 +18,7 @@ hr#top_of_content.space { margin-top : -6px; }
 @import "pagination";
 @import "seller_signup";
 @import "form_validations";
+@import "shared_blog_pages";
 
 /* show page specific */
 @import "blog_show_page";
