--- a/app/views/shared/blogs/_image_driven.haml
+++ b/app/views/shared/blogs/_image_driven.haml
@@ -1,10 +1,12 @@
 
-%div.reasonC.yui3-g
-  %div.reason_imageC.yui3-u-1-2
-    = link_to_unless full_article, image_tag(blog.photo.url(:large), :alt => blog.title), construct_blog_path(blog, :show)
+%div.yui3-g
+  %div.blog_left_colC.yui3-u-1-2
+    %h1.green= blog.title
+
+    %div.blog_main_imageC
+      = link_to_unless full_article, image_tag(blog.photo.url(:large), :alt => blog.title), construct_blog_path(blog, :show)
     = render :partial => 'shared/blogs/share_article_on', :locals => {:object => blog}
 
-  %div.blog_contentC.yui3-u-11-24
+  %div.yui3-u-11-24
     = render 'shared/blogs/email_this_image', :blog => blog
-    %br
     = render 'shared/blogs/share_this_image', :blog => blog
