--- a/public/stylesheets/sass/trends.scss
+++ b/public/stylesheets/sass/trends.scss
@@ -18,7 +18,7 @@ hr#top_of_content.space { margin-top : -15px; }
 @import "pagination";
 @import "seller_signup";
 @import "form_validations";
-
+@import "shared_blog_pages";
 
 /* show page specific */
 @import "blog_show_page";
