--- a/app/views/shared/blogs/_copy_image_code_create.haml
+++ b/app/views/shared/blogs/_copy_image_code_create.haml
@@ -1,6 +1,7 @@
 :ruby
-  copy_code_img = image_tag blog.photo.url, :alt => "eHouseOffers.com: #{blog.title}"
+  copy_code_img = image_tag_url blog.photo.url, :alt => "eHouseOffers.com: #{blog.title}"
 
 = link_to(copy_code_img, :controller => :blogs, :action => :show, :id => blog.title_for_url, :only_path => false)
 %br>
 %span{:style => "font-size:.85em;color:#666"}= raw "Powered by #{ link_to 'eHouseOffers.com', :controller => :blogs, :action => :index, :only_path => false }"
+
