--- a/app/views/shared/blogs/_copy_image_code_create.haml
+++ b/app/views/shared/blogs/_copy_image_code_create.haml
@@ -1,7 +1,15 @@
 :ruby
-  copy_code_img = image_tag_url blog.photo.url, :alt => "eHouseOffers.com: #{blog.title}"
+  image_path = "#{root_url}#{blog.photo.url(:large).gsub(/^\//,'')}"
+  image      = image_tag(image_path, :alt => "#{blog.title}")
+  image_link = link_to image, construct_blog_path(blog, :show, nil, true)
 
-= link_to(copy_code_img, :controller => :blogs, :action => :show, :id => blog.title_for_url, :only_path => false)
-%br>
-%span{:style => "font-size:.85em;color:#666"}= raw "Powered by #{ link_to 'eHouseOffers.com', :controller => :blogs, :action => :index, :only_path => false }"
+  index_path = construct_blog_path(blog, :index, nil, true)
+  if blog.context?(:trends)
+    fhelp = link_to 'Foreclosure Help', index_path
+    note  = "Trends &amp; #{fhelp} by eHouseOffers"
+  elsif blog.context?(:reasons)
+    sell  = link_to 'sell my house', index_path
+    note  = "Reasons to #{sell} by eHouseOffers"
+  end
 
+= "#{image_link}<br /><span style='font-size:.85em;color:#666'>#{note}"
