Ticket #17: Style Fixes & Markup Changes -- issue #3

--- a/app/views/shared/_copy_featured_icon_code_create.haml
+++ b/app/views/shared/_copy_featured_icon_code_create.haml
@@ -1,6 +1,8 @@
 :ruby
-  copy_code_img = image_tag_url 'featured/home-buyer-resource.png', :alt => "#{spotlight.title} : eHouseOffers.com"
+  image = image_tag_url 'featured/home-buyer-resource.png', :alt => "#{spotlight.title} : eHouseOffers.com"
+  image_ln = link_to(image, :controller => :spotlights, :action => :show, :id => spotlight.title_for_url, :only_path => false)
 
-%div{:style => 'width:112px; text-align:center; font-size:9px; color:#666'}
-  = "eHouseOffers #{link_to(copy_code_img, :controller => :spotlights, :action => :show, :id => spotlight.title_for_url, :only_path => false)}"
-  = link_to 'Professional Home Buyers', :controller => :home, :action => :home, :only_path => false
+  home_buyers = link_to 'home buyers', :controller => :home, :action => :home, :only_path => false
+  note = "Find #{home_buyers} at eHouseOffers"
+
+%div{:style => 'width:112px; text-align:center; font-size:9px; color:#666'}= "#{image_ln}<br />#{note}"
