Ticket #17: Style Fixes & Markup Changes -- issue #5: linking tabs for non-index pages

--- a/app/views/layouts/application/_menu.haml
+++ b/app/views/layouts/application/_menu.haml
@@ -4,4 +4,4 @@
     %li
       - img = image_tag '/images/transparent.gif', :id => section, :class => "app_sprite #{active_section?(section) ? 'selected' : ''}", :alt => section.capitalize
       - path= send("#{section}_path")
-      = link_to_unless current_page?(path), img, path
+      = link_to_unless current_page?(path) && params[:page].to_i<2, img, path
