--- a/app/views/shared/blogs/_share_article_on.haml
+++ b/app/views/shared/blogs/_share_article_on.haml
@@ -1,4 +1,7 @@
 :ruby
+  # This can take an agonizingly long time when developing, so just skip it!
+  return if Rails.env.eql?('development')
+
   extra_js('//connect.facebook.net/en_US/all.js')
 
 :javascript
