Fix spotlights breadcrumb vspacing

--- a/app/views/spotlights/index.html.haml
+++ b/app/views/spotlights/index.html.haml
@@ -1,7 +1,12 @@
 :ruby
   extra_css('spotlight_index')
   
-= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:spotlights, nil]]
+%hr#top_of_content.space
+
+= admin_area do
+  = link_to "Create New Spotlight", new_spotlight_path
+
+= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:spotlight, nil]]
 
 %div#spotlight_pageC.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
