Ticket #17: Style Fixes & Markup Changes -- issue #8: fix 'security guaranteed' text on seller listing form

--- a/public/stylesheets/sass/home.scss
+++ b/public/stylesheets/sass/home.scss
@@ -157,7 +157,7 @@ form#new_seller_listing div#last_name.field, form#new_seller_listing div#state.f
 }
 .submitC #securityC {
     @include inline_block();
-    font-size : .9em;
+    font-size : 11px;
     color : #666;
     position : relative;
     top : -22px;
