--- a/public/stylesheets/sass/_other_resources.scss
+++ b/public/stylesheets/sass/_other_resources.scss
@@ -7,6 +7,7 @@
 }
 .other_resourcesC .other_resourceC {
     text-align : center;
+    margin-bottom : 20px;
 }
 .other_resourceC p,
 .other_resourceC div {
