--- a/app/views/layouts/application/_footer.haml
+++ b/app/views/layouts/application/_footer.haml
@@ -29,11 +29,10 @@
         = render 'shared/delimeter'
         = link_to "Sign out", destroy_user_session_path
 
-
-
       - else
-        = link_to "Create Account", new_user_registration_path
-        = render 'shared/delimeter'
+        - if admin?
+          = link_to "Create Account", new_user_registration_path
+          = render 'shared/delimeter'
         = link_to "Sign in", new_user_session_path
 
         
