Ticket #17: Style Fixes & Markup Changes -- issue #13: remove breadcrumbs

--- a/app/views/home/about.haml
+++ b/app/views/home/about.haml
@@ -4,7 +4,7 @@
 
 %hr#about_page.space
 
-= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:about, nil]]
+-#= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:about, nil]]
 
 %div#about_pageC.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
