--- a/app/views/spotlights/index.html.haml
+++ b/app/views/spotlights/index.html.haml
@@ -6,7 +6,7 @@
 = admin_area do
   = link_to "Create New Spotlight", new_spotlight_path
 
-= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:spotlight, nil]]
+-#= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:spotlight, nil]]
 
 %div#spotlight_pageC.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
