--- a/public/stylesheets/spotlight_header.css
+++ b/public/stylesheets/spotlight_header.css
@@ -1,1 +1,1 @@
-#menuC{margin-bottom:4px}#mainC div#tab_arrow{display:block;left:430px;top:2px}#mainC img#top{background:url(/images/page_banners/spotlight.png) no-repeat scroll 0px 0px transparent;height:106px}ul.breadcrumbC{margin-top:10px}hr#top_of_content.space{margin-top:-10px}
+#menuC{margin-bottom:4px}#mainC div#tab_arrow{display:block;left:430px;top:2px}#mainC img#top{background:url(/images/page_banners/spotlight.png) no-repeat scroll 0px 0px transparent;height:106px}hr#top_of_content.space{margin-top:-10px}
