--- a/app/views/contact/show.haml
+++ b/app/views/contact/show.haml
@@ -1,7 +1,7 @@
 :ruby
   extra_css('contact_show')
 
-= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:contact_us, new_contact_path], [:message_send, nil]]
+-#= render "shared/breadcrumb", :crumbs => [[:home, root_path], [:contact_us, new_contact_path], [:message_send, nil]]
 
 %div#contact_showC.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
