--- a/app/views/guides/index.haml
+++ b/app/views/guides/index.haml
@@ -9,7 +9,7 @@
 = admin_area do
   = link_to "Create New #{name_for_context}", construct_blog_path(nil, :new, @context)
 
-= render "shared/breadcrumb", :crumbs => [[:home, root_path],[:guides, nil]]
+-#= render "shared/breadcrumb", :crumbs => [[:home, root_path],[:guides, nil]]
 
 %div.xs_two_col.yui3-g
   %div#left_col.yui3-u-33-48
