--- a/public/stylesheets/sass/spotlight_header.scss
+++ b/public/stylesheets/sass/spotlight_header.scss
@@ -9,6 +9,6 @@
     height : 106px;
 }
 ul.breadcrumbC {
-    margin-top : 10px;
+/*    margin-top : 10px;*/
 }
 hr#top_of_content.space { margin-top : -10px; }
