Ticket #17: Style Fixes & Markup Changes -- issue #14: fixed some text color on the home page

--- a/public/stylesheets/sass/home.scss
+++ b/public/stylesheets/sass/home.scss
@@ -5,7 +5,7 @@
 p {
     font-size : .85em;
     line-height : 1.05em;
-    color : #888;
+    color : #676767;
     margin-bottom : 5px;
 }
 
@@ -113,7 +113,7 @@ h1 {
     letter-spacing : -.3px;
 }
 div#welcome_message p {
-    color : #555555;
+/*    color : #555555;*/
     font-size : .8em;
     line-height : 1.4em;
     margin-top : .3em;
