Ticket #17: Style Fixes & Markup Changes -- final issues: font colors, links, vertical alignment, and comment inside copy code

--- a/app/views/shared/blogs/_copy_image_code_create.haml
+++ b/app/views/shared/blogs/_copy_image_code_create.haml
@@ -12,4 +12,6 @@
     note  = "Reasons to #{sell} by eHouseOffers"
   end
 
+
+<!-- CLICK HERE TO SELECT -->
 = "#{image_link}<br /><span style='font-size:.85em;color:#666'>#{note}"
