--- a/public/stylesheets/shared_blog_pages.css
+++ b/public/stylesheets/shared_blog_pages.css
@@ -1,1 +1,1 @@
-div.blog_left_colC h1{margin-left:10px}div.blog_left_colC .blog_main_imageC{min-height:249px}div.email_this_imageC.box{margin-bottom:26px}
+div.blog_left_colC h1{margin-left:10px}h1.green a{color:#75973e}h1.green a:hover{text-decoration:none;color:#5d7e29}div.blog_left_colC .blog_main_imageC{min-height:249px}div.email_this_imageC.box{margin-bottom:26px}
